RESOLVED FIXED224673
AudioMediaStreamTrackRendererUnit should not have its data zeroed if one track has not enough data
https://bugs.webkit.org/show_bug.cgi?id=224673
Summary AudioMediaStreamTrackRendererUnit should not have its data zeroed if one trac...
youenn fablet
Reported 2021-04-16 07:31:34 PDT
AudioMediaStreamTrackRendererUnit should not have its data zeroed if one track has not enough data
Attachments
Patch (4.69 KB, patch)
2021-04-16 07:42 PDT, youenn fablet
no flags
Patch (3.49 KB, patch)
2021-04-16 07:44 PDT, youenn fablet
no flags
Patch (3.13 KB, patch)
2021-04-16 09:06 PDT, youenn fablet
no flags
Patch for landing (3.46 KB, patch)
2021-04-21 00:47 PDT, youenn fablet
no flags
youenn fablet
Comment 1 2021-04-16 07:42:53 PDT
youenn fablet
Comment 2 2021-04-16 07:44:19 PDT
youenn fablet
Comment 3 2021-04-16 09:06:30 PDT
EWS
Comment 4 2021-04-19 08:54:33 PDT
Tools/Scripts/svn-apply failed to apply attachment 426233 [details] to trunk. Please resolve the conflicts and upload a new patch.
youenn fablet
Comment 5 2021-04-21 00:47:48 PDT
Created attachment 426655 [details] Patch for landing
EWS
Comment 6 2021-04-21 07:15:19 PDT
Committed r276359 (236837@main): <https://commits.webkit.org/236837@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 426655 [details].
Radar WebKit Bug Importer
Comment 7 2021-04-23 00:16:01 PDT
Note You need to log in before you can comment on or make changes to this bug.