AudioMediaStreamTrackRendererUnit should not have its data zeroed if one track has not enough data https://bugs.webkit.org/show_bug.cgi?id=224673

Reviewed by Eric Carlson.

AudioMediaStreamTrackRendererUnit may get data from multiple tracks.
If one track has not enough data, AudioSampleDataSource will zero the buffer while it should leave it unchanged.
If all tracks do not have enough data, AudioMediaStreamTrackRendererUnit will have silent output as the first track will actually zero the buffer.

Manually tested.

* platform/audio/cocoa/AudioSampleDataSource.mm:
(WebCore::AudioSampleDataSource::pullSamplesInternal):


Canonical link: https://commits.webkit.org/236837@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@276359 268f45cc-cd09-0410-ab3c-d52691b4dbfc